convbas/convbas/logs/hls_run_csim_3100.backup.log
  **** HLS Build v2025.1 6135595
INFO: [HLS 200-2005] Using work_dir C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/convbas 
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/convbas/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/convbas'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=convbas.cpp' from C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/convbas.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=tb.cpp' from C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/hls_config.cfg(8)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/tb.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=convbas' from C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/hls_config.cfg(9)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7z020clg400-1' from C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg400-1'
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Users/indir/Desktop/Arm_SoC/Convbas/convbas/convbas/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../tb.cpp in debug mode
csim.mk:88: recipe for target 'obj/tb.o' failed
../../../../tb.cpp:84:5: error: use of undeclared identifier 'conv_accelerator'
    conv_accelerator(input_img.data(), hw_output.data(), TEST_H, TEST_W, weights.data());
    ^
1 error generated.
make: *** [obj/tb.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 1 seconds. Total elapsed time: 2.492 seconds; peak allocated memory: 147.953 MB.
